--- a/flow.yml
+++ b/flow.yml
@@ -1,31 +1,33 @@
 jtype: Flow
-version: '1'
+version: "1"
 with:
-  port_expose: 45678
+    port_expose: 45678
 executors:
-  - name: 'segmenter'
-    uses: AudioSegmenter
-    uses_with:
-      window_size: 4
-      stride: 2
-    py_modules:
-      - executors.py
-  - name: 'encoder'
-    uses: 'jinahub://VGGishAudioEncoder'
-    uses_with:
-      traversal_paths: ['c', ]
-      load_input_from: 'waveform'
-      min_duration: 4
-    volumes:
-      - './models:/workspace/models'
-  - name: 'indexer'
-    uses: 'jinahub://SimpleIndexer'
-    uses_with:
-      match_args:
-        limit: 5
-        traversal_rdarray: ['c',]
-        traversal_ldarray: ['c',]
-  - name: ranker
-    uses: MyRanker
-    py_modules:
-      - executors.py
+    - name: "segmenter"
+      uses: AudioSegmenter
+      uses_with:
+          window_size: 4
+          stride: 2
+      py_modules:
+          - executors.py
+    - name: "encoder"
+      uses: "jinahub://VGGishAudioEncoder/v0.4"
+      uses_with:
+          traversal_paths: ["c"]
+          load_input_from: "waveform"
+          min_duration: 4
+      install_requirements: "True"
+      volumes:
+          - "./models:/workspace/models"
+    - name: "indexer"
+      uses: "jinahub://SimpleIndexer/v0.11"
+      uses_with:
+          match_args:
+              limit: 5
+              traversal_rdarray: ["c"]
+              traversal_ldarray: ["c"]
+      install_requirements: "True"
+    - name: ranker
+      uses: MyRanker
+      py_modules:
+          - executors.py
