--- a/flow.yml
+++ b/flow.yml
@@ -11,7 +11,7 @@ executors:
       py_modules:
           - executors.py
     - name: "encoder"
-      uses: "jinahub://VGGishAudioEncoder/v0.4"
+      uses: "jinahub://VGGishAudioEncoder"
       uses_with:
           traversal_paths: ["c"]
           load_input_from: "waveform"
@@ -20,7 +20,7 @@ executors:
       volumes:
           - "./models:/workspace/models"
     - name: "indexer"
-      uses: "jinahub://SimpleIndexer/v0.11"
+      uses: "jinahub://SimpleIndexer"
       uses_with:
           match_args:
               limit: 5
